--- a/index.html
+++ b/index.html
@@ -1,7 +1,125 @@
-<!DOCTYPE html>
+<!DOCTYPE html> 
 <html>
-<body>
-<h1>Hello World</h1>
-<p>I'm hosted with GitHub Pages.</p>
-</body>
+    <head>
+        <link rel="stylesheet" href="css/styles.css">
+        <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata" rel="stylesheet">
+        <script src="https://kit.fontawesome.com/82f9461cd1.js"></script>
+        <title>Tomas Velez</title>
+    </head>
+    <body>
+        <div class="header-container">
+            <nav id="header-nav">
+                <ul class="header-ul">
+                    <li class="header-item">
+                        <a class="header-item-text" href="#hello">Sobre mi</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-item-text" href="#resume">Resumen</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-item-text" href="#portfolio">Proyectos</a>
+                    </li>
+                    <li class="header-item">
+                        <a class="header-item-text" href="#contact">Contacto</a>
+                    </li>
+                </ul>
+            </nav>
+            <div class="info-container">
+                <div id="me-photo-container">
+                    <img src="assets/images/profile.jpg">
+                </div>
+                <div id="me-info">
+                    <h1>Tomas Velez</h2>
+                    <div id="me-info-details">
+                        <div>
+                            <h3 style="color:rgba(255, 255, 255, 0.5);">CIUDAD:</h3>
+                            <h3 style="color:rgba(255, 255, 255, 0.5);">EDAD:</h3>
+                            <h3 style="color:rgba(255, 255, 255, 0.5);">EMAIL:</h3>
+                            <h3 style="color:rgba(255, 255, 255, 0.5);">ESTUDIO EN:</h3>
+                            <div id="rrss-container">
+                                <a href="https://github.com/txvnt" target="_blank">
+                                    <i class="fab fa-github icon"></i>
+                                </a>
+                                <a href="https://linkedin.com/tomasvzn" target="_blank">
+                                    <i class="fab fa-linkedin icon"></i>
+                                </a>
+                                <a href="https://instagram.com/tomasvzn" target="_blank">
+                                    <i class="fab fa-instagram icon"></i>
+                                </a>
+                            </div>
+                        </div>
+                        <div style="margin-left: 16px;">
+                            <h3>Coquimbo, Chile</h3>
+                            <h3>19</h3>
+                            <h3><a href="mailto:tomas.velez@alumnos.ucn.cl">tomas.velez@alumnos.ucn.cl</a></h3>
+                            <h3>Universidad Catolica del Norte</h3>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="content-container">
+            <div class="block">
+                <span class="title">
+                    <h1>Sobre mi</h1>
+                </span>
+                <span class="paragraph">
+                    <p>Mi nombre es Tomas Velez, y soy estudiante de Ingeniería Civil en Computación e Informática en la Universidad Católica del Norte en Coquimbo, Chile. Me apasiona el diseño y desarollo de software, en especial en el campo de aplicaciones móviles. También tengo experiencia en desarrollo web y desarrollo de videojuegos en Unity para plataformas móviles. Además, soy parte del equipo de Programación Competitiva de mi universidad, habiendo participado en el último Torneo Chileno-Argentino de Programación.</p>
+                </span>
+            </div>
+            <div class="block">
+                <span class ="title">
+                    <h1>Resumen</h1>
+                </span>
+                <div style="display:flex;flex-direction:row;">
+                    <div style="flex:1;margin-right: 16px;">
+                        <span class ="subtitle">
+                            <h5>Educacion</h5>
+                        </span>
+                        <div class="exp-card">
+                            <div class="left-side-card">
+                                <img src="assets/images/ucn.png">
+                            </div>
+                            <div class="right-side-card">
+                                <span>
+                                    <h3>Ingenieria Civil en Computacion e Informatica</h3>
+                                    <h5>Universidad Catolica del Norte</h5>
+                                </span>
+                                <h4>2017-Actualidad</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="flex:1;margin-right: 16px;">
+                        <span class ="subtitle">
+                            <h5>Experiencia laboral</h5>
+                        </span>
+                        <div class="exp-card">
+                            <div class="left-side-card">
+                                <img src="assets/images/logo.png">
+                            </div>
+                            <div class="right-side-card">
+                                <span>
+                                    <h3>Desarrollador React Native</h3>
+                                    <h5>Tenis-Up</h5>
+                                </span>
+                                <h4>2019-Actualidad</h4>
+                            </div>
+                        </div>
+                        <div class="exp-card">
+                            <div class="left-side-card">
+                                <img src="assets/images/ucn.png">
+                            </div>
+                            <div class="right-side-card">
+                                <span>
+                                    <h3>Desarrollador React Native</h3>
+                                    <h5>Universidad Catolica del Norte</h5>
+                                </span>
+                                <h4>2018-2019</h4>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </body>
 </html>
