--- a/index.html
+++ b/index.html
@@ -11,17 +11,19 @@
             <nav id="header-nav">
                 <ul class="header-ul">
                     <li class="header-item">
-                        <a class="header-item-text" href="#hello">Sobre mi</a>
+                        <a class="header-item-text" href="#about-me">Sobre mi</a>
                     </li>
                     <li class="header-item">
                         <a class="header-item-text" href="#resume">Resumen</a>
                     </li>
+                    <!--
                     <li class="header-item">
                         <a class="header-item-text" href="#portfolio">Proyectos</a>
                     </li>
                     <li class="header-item">
                         <a class="header-item-text" href="#contact">Contacto</a>
                     </li>
+                    -->
                 </ul>
             </nav>
             <div class="info-container">
@@ -59,7 +61,7 @@
             </div>
         </div>
         <div class="content-container">
-            <div class="block">
+            <div id="about-me" class="block">
                 <span class="title">
                     <h1>Sobre mi</h1>
                 </span>
@@ -67,7 +69,7 @@
                     <p>Mi nombre es Tomas Velez, y soy estudiante de Ingeniería Civil en Computación e Informática en la Universidad Católica del Norte en Coquimbo, Chile. Me apasiona el diseño y desarollo de software, en especial en el campo de aplicaciones móviles. También tengo experiencia en desarrollo web y desarrollo de videojuegos en Unity para plataformas móviles. Además, soy parte del equipo de Programación Competitiva de mi universidad, habiendo participado en el último Torneo Chileno-Argentino de Programación.</p>
                 </span>
             </div>
-            <div class="block">
+            <div id="resume" class="block">
                 <span class ="title">
                     <h1>Resumen</h1>
                 </span>
