--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
                                 <a href="https://github.com/txvnt" target="_blank">
                                     <i class="fab fa-github icon"></i>
                                 </a>
-                                <a href="www.linkedin.com/in/tomasvzn" target="_blank">
+                                <a href="https://www.linkedin.com/in/tomasvzn" target="_blank">
                                     <i class="fab fa-linkedin icon"></i>
                                 </a>
                                 <a href="https://instagram.com/tomasvzn" target="_blank">
