--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
 <!DOCTYPE html> 
 <html>
     <head>
-        <link rel="stylesheet" href="css/styles.css">
+        <link rel="stylesheet" href="assets/css/styles.css">
         <link href="https://fonts.googleapis.com/css?family=Roboto|Roboto+Mono|Inconsolata" rel="stylesheet">
+        <meta name="viewport" content="width=device-width, initial-scale=1">
         <script src="https://kit.fontawesome.com/82f9461cd1.js"></script>
         <title>Tomas Velez</title>
     </head>
@@ -31,6 +32,9 @@
                     <img src="assets/images/profile.jpg">
                 </div>
                 <div id="me-info">
+                    <div id="me-secondary-photo-container">
+                        <img src="assets/images/profile.jpg">
+                    </div>
                     <h1>Tomas Velez</h2>
                     <div id="me-info-details">
                         <div>
@@ -73,7 +77,7 @@
                 <span class ="title">
                     <h1>Resumen</h1>
                 </span>
-                <div style="display:flex;flex-direction:row;">
+                <div class="resume-container">
                     <div style="flex:1;margin-right: 16px;">
                         <span class ="subtitle">
                             <h5>Educacion</h5>
@@ -117,6 +121,23 @@
                                     <h5>Universidad Catolica del Norte</h5>
                                 </span>
                                 <h4>2018-2019</h4>
+                            </div>
+                        </div>
+                    </div>
+                    <div style="flex:1;margin-right: 16px;">
+                        <span class ="subtitle">
+                            <h5>programacion competitiva</h5>
+                        </span>
+                        <div class="exp-card">
+                            <div class="left-side-card">
+                                <img src="assets/images/acm.jpeg">
+                            </div>
+                            <div class="right-side-card">
+                                <span>
+                                    <h3>Torneo Chileno-Argentino de Programacion</h3>
+                                    <h5>15avo lugar</h5>
+                                </span>
+                                <h4>2018</h4>
                             </div>
                         </div>
                     </div>
