--- a/index.html
+++ b/index.html
@@ -135,9 +135,19 @@
                             <div class="right-side-card">
                                 <span>
                                     <h3>Torneo Chileno-Argentino de Programacion</h3>
-                                    <h5>15avo lugar</h5>
                                 </span>
                                 <h4>2018</h4>
+                            </div>
+                        </div>
+                        <div class="exp-card">
+                            <div class="left-side-card">
+                                <img src="assets/images/acm.jpeg">
+                            </div>
+                            <div class="right-side-card">
+                                <span>
+                                    <h3>Campamento de programacion ProgComp CL</h3>
+                                </span>
+                                <h4>2019</h4>
                             </div>
                         </div>
                     </div>
