--- a/index.html
+++ b/index.html
@@ -141,7 +141,7 @@
                         </div>
                         <div class="exp-card">
                             <div class="left-side-card">
-                                <img src="assets/images/acm.jpeg">
+                                <img src="https://66.media.tumblr.com/avatar_414a8ac6fc3d_128.pnj">
                             </div>
                             <div class="right-side-card">
                                 <span>
